# LineageAI

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Spec/: 00-Architecture.md  00-Inital-app.md  01-Frotned.md  01-Implementation-Context.md
backend/src/lineageai/: __init__.py  config.py  main.py  models.py  scenarios.py
backend/src/lineageai/agent/: __init__.py  graph.py  interfaces.py  kimi.py
backend/src/lineageai/api/: __init__.py  routes.py  run_service.py
backend/src/lineageai/integrations/: datahub.py  demo.py  github.py  publishing.py
backend/src/lineageai/validation/: __init__.py  error_parser.py  stubs.py  type_mapping.py  validator.py
backend/tests/: conftest.py  test_agent_graph.py  test_datahub_retrieval.py  test_demo.py  test_end_to_end.py  test_error_parser.py  test_kimi.py  test_main.py  test_publishing.py  test_run_api.py  test_scenarios.py  test_stubs.py  test_type_mapping.py  test_validator.py
examples/: customer_revenue.sql  customer_revenue.yml
examples/complex_lineage/: category_revenue.sql  category_revenue.yml  prompt.md
examples/happy_path/: customer_revenue.sql  customer_revenue.yml  prompt.md
examples/self_healing/: prompt.md  regional_revenue.yml
frontend/: package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  api.ts  index.css
frontend/src/components/: LineagePreview.test.tsx  LineagePreview.tsx  ValidationReport.test.tsx  ValidationReport.tsx
infra/: seed_datahub.py
