[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lineageai"
version = "0.1.0"
description = "Metadata-grounded, self-healing dbt developer agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
dependencies = [
  "acryl-datahub>=1.3.0",
  "dbt-core>=1.10.0",
  "dbt-duckdb>=1.9.0",
  "duckdb>=1.3.0",
  "faker>=37.0.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "langgraph>=0.6.0",
  "openai>=1.99.0",
  "pydantic-settings>=2.10.0",
  "pygithub>=2.7.0",
  "pyyaml>=6.0.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17.0",
  "pre-commit>=4.2.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
  "types-pyyaml>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/lineageai"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["backend/src"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["lineageai"]
mypy_path = "backend/src"
plugins = ["pydantic.mypy"]
